# fintech-ux-research

./: .gitignore  README.md  app.py  exporters.py  pyproject.toml  requirements.txt  ux_insight_report.md
src/fintech_ux_research/: crew.py  main.py
src/fintech_ux_research/config/: agents.yaml  tasks.yaml
